 Cavebot: Will retreive less items if they are too heavy(ie. 50 spears)
 Cavebot: Will eat more food from corpses
 Spellcaster: Added some default spells to list
 Cavebot & Auto go/log: Can manually edit the x,y,z coordinates before adding to list
 Banker: Added 4 new bankers
 Banker: After going to bank, will restock and deposit at depot to save time (but cavebot will not stop by bank)

Defects
 Cavebot: Fixed one of the crash bugs in the cavebot(when not looting creature and going back to hunt)
 Spellcaster: Fixed the saving of the Exori Mas setting
 Auto Go/Log:Fixed "Reached Runaway" option
 Fluid Drinker: Added safety to not drink when at max hp or mana
 Ammo Restacker: Fixed saving Restack to Right Hand option
 Cavebot: Fixed walking bug when it continually goes up and down levels in a loop
 Cavebot: Fixed crashing when debug enabled and cavebot cannot find a path to destination
 Cavebot: Sped up wakling algorithm (has been unnoticeably broken ever since last time it was improved)
 Cavebot: Fixed retreiving items from main depot container
 Cavebot: Fixed resuming attack on distance creatures
 %ta : No longer accidentally sends words beginning with %ta in private chat and NPC channel(will still show up,but won't be sent)
 All Over: Fixed more than 30 memory leaks just sitting

1.20.2, 24.07.2009
Enhancments
 Cavebot: Allowed for quick upload of statistics files from cavebot dialog(also increased size for prompt)
 Character Info: Significant memory leak fixed :)
 Spellcaster: Fixed not casting against certain creatures after letter 'S'

Defects
 Cavebot: Removed popup when pausing and unpausing cavebot
 Cavebot: Completely fixed loot from floor
 Cavebot: Fixed crash on "drop items instead of depositing" option
 Food Eater: Added back eating times to the items.xml file
 Auto Go/Log:Fixed the saving of the whitelist to a config file(all new saved whitelists will load correctly)